# batchspawner

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  SPAWNERS.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/: dependabot.yaml
.github/workflows/: python-publish.yml  release.yaml  test.yaml  test.yml
batchspawner/: __init__.py  _version.py  api.py  batchspawner.py  singleuser.py  utils.py  wrapspawner.py
batchspawner/tests/: conftest.py  test_spawners.py
scripts/: batchspawner-singleuser
slurmspawner/: __init__.py  slurmspawner.py
